# SMS

./: .gitignore  README.md  meeting revise requirements.txt
app/: Makefile  README.md  pyproject.toml  start.sh  test.db
app/src/app/: database.py  main.py  models.py  schemas.py  sms.py
