[project]
name = "app"
version = "0.1.0"
description = "SMS service with failover and text customization"
readme = "README.md"
requires-python = ">=3.11.9"
authors = [
    { name = "programmer16", email = "programmer16@istnn.com" },
]
dependencies = [
    "fastapi>=0.114.2",
    "uvicorn>=0.30.6",
    "sqlalchemy>=2.0.34",
    "asyncpg>=0.29.0",
    "aiohttp>=3.10.5",
    "pydantic>=2.9.1",
    "databases>=0.9.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3"]

[project.scripts]
start = "./start.sh"

[build-system]
requires = ["hatchling", "uv>=0.4.10"]
build-backend = "hatchling.build"
